cluster/apps/default/actual-budget/sms-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget-sms-proxy
  namespace: default
  labels:
    app: actual-budget-sms-proxy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: actual-budget-sms-proxy
  template:
    metadata:
      labels:
        app: actual-budget-sms-proxy
    spec:
      # TODO: Add requests and limits
      # TODO: Add readiness and liveness probes
      containers:
        - name: proxy
          image: ghcr.io/shadyf/actual-budget-sms-proxy:v2.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/config.json
              subPath: config.json
          resources:
            requests:
              cpu: 10m
              memory: 225Mi
            limits:
              memory: 225Mi
      volumes:
        - name: config-volume
          configMap:
            name: actual-budget-sms-proxy-configmap
            items:
              - key: config.json
                path: config.json
