cluster/apps/default/actual-budget/sms-proxy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget-sms-proxy-svc
  namespace: default
spec:
  selector:
    app: actual-budget-sms-proxy
  ports:
    - protocol: TCP
      port: 8080
      name: http
  clusterIP: None
  type: ClusterIP
