cluster/apps/default/actual-budget/sms-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget-sms-proxy-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    external-dns/is-public: "true"
    external-dns.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: "external"
  rules:
    - host: "actual-sms-proxy.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: actual-budget-sms-proxy-svc
                port:
                  number: 8080
  tls:
    - hosts:
        - "actual-sms-proxy.${SECRET_DOMAIN}"
